--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Where I am</title>
     <script src="dist/bundle.js" defer></script>
+    <link rel="stylesheet" href="app.css">
 </head>
 <body>
-    
+    <div id="map">
+        <p>Please enter an address!</p>
+    </div>
+    <form>
+        <input type="text" id="address">
+        <button type="submit">Search Place</button>
+    </form>
 </body>
 </html>
