Refactor app.ts with google maps api

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
-    <div id="map">
+    <a id="map">
         <p>Please enter an address!</p>
-    </div>
+    </a>
     <form>
         <input type="text" id="address">
         <button type="submit">Search Place</button>
